# ytdlp_webui

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: x86-linux.yml  x86-windows.yml
scripts/: README.md  cleanup.sh  create_package.sh  download_ubuntu.sh  download_win32.sh
src/: app.rs  database.rs  ffmpeg.rs  lib.rs  main.rs  metadata.rs  routes.rs  util.rs  worker_download.rs  worker_transcode.rs  ytdlp.rs
static/: api.js  index.css  index.html  index.js  table.html  table.js  util.js
static/fragments/: download_progress.html  download_progress.js  metadata.html  metadata.js  table.css  table.html  table.js  transcode_progress.html  transcode_progress.js
